# pokemon-ai-video-generator

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
backend/: app.py  config.py  models.py
backend/pipeline/: base.py  orchestrator.py  s01_research.py  s02_story.py  s03_asset_planning.py  s04_asset_generation.py  s05_composite_generation.py  s06_video_prompts.py  s07_video_generation.py  s08_audio_prompts.py  s09_audio_generation.py  s10_sfx_prompts.py  s11_sfx_generation.py  s12_assembly.py
backend/routers/: pipeline.py  projects.py
backend/services/: elevenlabs_service.py  ffmpeg_service.py  gemini_service.py  kling_service.py  llm_service.py  subject_catalog.py  telegram_service.py
bulbasaur/: 02_story_script.md  03_assets.md  05_audio_generation.md
charizard/: 01_research.md  02_story_script.md  03_assets.md  04_video_prompts.md  05_audio_generation.md  06_sound_effects_prompts.md
frontend/: index.html
haunter/: 06_sound_effects_prompts.md
hipogriff/: 01_research.md  02_story_script.md  03_assets.md  pipeline_state.json
pikachu/: 01_research.md  02_story_script.md  03_assets.md  05_audio_generation.md  pipeline_state.json
prompts/: 1_research.md  2_story_generator.md  3.5_generate_assets_agent.md  4.5_generate_videos_agent.md  4_video_prompt_engineering.md  5_voice_prompt_engineer.md  6.5_generate_sound_effects_agent.md
scripts/: .env  .env.example  README.md  assemble_video.py  create_composite.py  create_split_screen.py  generate_asset.py  generate_audio.py  generate_sound_effects.py  generate_video.py
(+35 files in other folders)
